src/component/description/Description.css
.description-choice {
  padding-top: 2rem;
  padding-bottom: 1rem;
}
.observe-button, .test-button {
  width: 50%;
  padding-top: 1rem;
  padding-bottom: 1rem;
}
.test-button {
  background-color: #F9FBE7;
}
.rectangle-figure {
  margin-left: 5rem;
  margin-right: 5rem;
}
.description-symetri {
   margin-top: 5rem;
   padding-top: 2rem;
 }
.choice-checker {
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}
.displayer {
  display: inline-block;
}
.display-line, .display-point {
  float: left;
  margin-right: 3rem;
}
.displayer-one {
  margin: 3rem;
}
.dot-choice, .line-choice {
  width: 50%;
  display: inline-block;
  position: relative;
}
.dot-choice>input, .line-choice>input {
  width: 1.5rem;
  height: 1.5rem;
  cursor: pointer;
}
.dot-choice>input {
  top: 3rem;
}
.line-choice>input {
  top: 4rem;
}
.dots-or-line-choice {
  padding: 0 7rem 5rem;
}

